@@ -1,3 +1,11 @@
+2003-09-12  Patrice Dumas <dumas@centre-cired.fr>
+
+	* texi2html.pl, texi2html.init: 0 is accepted as a value for
+	the reference arguments.
+	rewrite from scratch the functions handling references in .init 
+	files to put them in the public domain. Avoid string concatenation
+	to ease internationalization.
+
 2003-09-11  Patrice Dumas <dumas@centre-cired.fr>
 
 	* texi2html.pl, texi2html.init, T2h_i18n.pm, manage_i18n.pl,
